(library
 (public_name lispw)
 (name lispw)
 (modules_without_implementation truc)
 (inline_tests)
 (preprocess (pps ppx_inline_test))
 (libraries ANSITerminal ssl threads.posix core ISO8601 str))
(menhir
 (modules parser parserJs))
(ocamllex lexer lexerJs)
(documentation
 (package lispw))
(rule
 (target archive.tar.gz)
 (deps
  (:scm (glob_files scm/*.scm)))
 (action (run %{bin:tar} -czvf %{target} %{deps})))
